# ts_mtm2_controller

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  build.rs
.githooks/: pre-commit
config/: cell_geom.yaml  home_position.yaml  parameters_app.yaml  parameters_control.yaml  parameters_daq.yaml  parameters_power.yaml
config/cell/: cell_actuator_mapping.yaml
config/cell/actuator/: A_Model_14902-1000_SN_001.yaml  A_Model_14902-1000_SN_002.yaml  A_Model_14902-1000_SN_003.yaml  A_Model_14902-1000_SN_004.yaml  A_Model_14902-1000_SN_005.yaml  A_Model_14902-1000_SN_006.yaml  A_Model_14902-1000_SN_007.yaml  A_Model_14902-1000_SN_008.yaml  A_Model_14902-1000_SN_009.yaml  A_Model_14902-1000_SN_010.yaml  A_Model_14902-1000_SN_011.yaml  A_Model_14902-1000_SN_012.yaml  A_Model_14902-1000_SN_013.yaml  A_Model_14902-1000_SN_014.yaml  A_Model_14902-1000_SN_015.yaml  A_Model_14902-1000_SN_016.yaml  A_Model_14902-1000_SN_017.yaml  A_Model_14902-1000_SN_018.yaml  A_Model_14902-1000_SN_019.yaml  A_Model_14902-1000_SN_020.yaml  A_Model_14902-1100_SN_001.yaml  A_Model_14902-1100_SN_002.yaml  (+64 more)
doc/: README.md  class_diagram.md  communication_diagram.md  deployment.md  version_history.md
dockerImage/: Dockerfile
fpga/: NiFpga.c  NiFpga.h  NiFpga_portSerialMasterSlave.c  NiFpga_portSerialMasterSlave.h
script/: m2
src/: application.rs  command.rs  config.rs  constants.rs  control.rs  controller.rs  daq.rs  enums.rs  error_handler.rs  event_queue.rs  interface.rs  lib.rs  main.rs  mock.rs  model.rs  power.rs  status.rs  telemetry.rs  utility.rs
src/command/: command_control_loop.rs  command_controller.rs  command_data_acquisition.rs  command_power_system.rs  command_schema.rs
src/control/: actuator.rs  biquadratic_filter.rs  closed_loop.rs  control_loop.rs  control_loop_process.rs  deadband_control.rs  gain_schedular.rs  in_position.rs  lut.rs  math_tool.rs  open_loop.rs  simple_delay_filter.rs
src/daq/: config_data_acquisition.rs  data_acquisition.rs  data_acquisition_process.rs  fpga_wrapper.rs  inner_loop_controller.rs
src/interface/: command_server.rs  command_telemetry_server.rs  tcp_server.rs  telemetry_server.rs
src/mock/: mock_constants.rs  mock_inner_loop_controller.rs  mock_plant.rs  mock_power_system.rs
src/power/: config_power.rs  power_system.rs  power_system_process.rs  sub_power_system.rs
src/telemetry/: event.rs  telemetry.rs  telemetry_control_loop.rs  telemetry_default.rs  telemetry_power.rs
(+2 files in other folders)
