[package]
name = "run_m2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
ts_control_utils = { git = "https://github.com/lsst-ts/ts_control_utils.git", branch = "develop" }
nifpga-dll = { git = "https://github.com/lsst-ts/nifpga-dll-rs.git", branch = "tickets/OSW-1832" }
approx = "0.5"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["cargo"] }
csv = "1.4.0"
kiddo = "4.2.1"
log = "0.4.29"
nalgebra = { version = "0.33.2", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.3.18"
simplelog = "0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.25.0"
time = "0.3.47"
crc = "3.4.0"

[build-dependencies]
cc = "1.1"
